add gherkin images

--- a/gherkin-scenarios.html
+++ b/gherkin-scenarios.html
@@ -76,20 +76,62 @@
                         </p>
                         
                         <div class="alert alert-info">
-                            <h4 class="alert-heading">Why Gherkin?</h4>
-                            <p>
-                                Gherkin scenarios provide several key benefits for our migration testing:
-                            </p>
-                            <ul>
-                                <li><strong>Clear Communication:</strong> Bridges the gap between technical and non-technical team members</li>
-                                <li><strong>Behavior Focus:</strong> Describes system behavior from the user's perspective</li>
-                                <li><strong>Test Automation:</strong> Can be directly converted into automated tests</li>
-                                <li><strong>Documentation:</strong> Serves as living documentation of expected system behavior</li>
-                                <li><strong>Requirements Validation:</strong> Ensures all requirements are testable and verified</li>
-                            </ul>
+                            <div class="row">
+                                <div class="col-md-8">
+                                    <h4 class="alert-heading">Why Gherkin?</h4>
+                                    <p>
+                                        Gherkin scenarios provide several key benefits for our migration testing:
+                                    </p>
+                                    <ul>
+                                        <li><strong>Clear Communication:</strong> Bridges the gap between technical and non-technical team members</li>
+                                        <li><strong>Behavior Focus:</strong> Describes system behavior from the user's perspective</li>
+                                        <li><strong>Test Automation:</strong> Can be directly converted into automated tests</li>
+                                        <li><strong>Documentation:</strong> Serves as living documentation of expected system behavior</li>
+                                        <li><strong>Requirements Validation:</strong> Ensures all requirements are testable and verified</li>
+                                    </ul>
+                                </div>
+                                <div class="col-md-4 text-center">
+                                    <img src="character-images/gherkin.png" alt="Gherkin Syntax Example" class="img-fluid rounded mt-3 mt-md-0" style="max-height: 200px;">
+                                    <p class="text-muted small mt-2">Gherkin syntax makes testing scenarios readable and executable</p>
+                                </div>
+                            </div>
                         </div>
 
                         <div class="alert alert-success">
+                            <div class="row mb-3">
+                                <div class="col-12">
+                                    <div class="d-flex justify-content-center flex-wrap gap-3">
+                                        <div class="text-center">
+                                            <img src="kanley.webp" alt="Kanley Stubrick" class="rounded-circle" style="width: 60px; height: 60px; object-fit: cover;">
+                                            <div class="small text-muted mt-1">Kanley</div>
+                                        </div>
+                                        <div class="text-center">
+                                            <img src="herner.webp" alt="Herner Werzog" class="rounded-circle" style="width: 60px; height: 60px; object-fit: cover;">
+                                            <div class="small text-muted mt-1">Herner</div>
+                                        </div>
+                                        <div class="text-center">
+                                            <img src="twitterprod.webp" alt="TwitterProd" class="rounded-circle" style="width: 60px; height: 60px; object-fit: cover;">
+                                            <div class="small text-muted mt-1">TwitterProd</div>
+                                        </div>
+                                        <div class="text-center">
+                                            <img src="keith.webp" alt="Keith Fellini" class="rounded-circle" style="width: 60px; height: 60px; object-fit: cover;">
+                                            <div class="small text-muted mt-1">Keith</div>
+                                        </div>
+                                        <div class="text-center">
+                                            <img src="https://randomuser.me/api/portraits/women/44.jpg" alt="Sandra Blockchain" class="rounded-circle" style="width: 60px; height: 60px; object-fit: cover;">
+                                            <div class="small text-muted mt-1">Sandra</div>
+                                        </div>
+                                        <div class="text-center">
+                                            <img src="https://randomuser.me/api/portraits/men/35.jpg" alt="Apple User" class="rounded-circle" style="width: 60px; height: 60px; object-fit: cover;">
+                                            <div class="small text-muted mt-1">Apple User</div>
+                                        </div>
+                                        <div class="text-center">
+                                            <img src="https://randomuser.me/api/portraits/men/22.jpg" alt="New User" class="rounded-circle" style="width: 60px; height: 60px; object-fit: cover;">
+                                            <div class="small text-muted mt-1">New User</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                             <h4 class="alert-heading">Character-Based Testing</h4>
                             <p>
                                 Our Gherkin scenarios are organized around character roles because:
