add revise kubrik role

--- a/gherkin-scenarios.html
+++ b/gherkin-scenarios.html
@@ -154,7 +154,7 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header bg-primary text-white">
-                        <h2 class="h5 mb-0">🧑‍🎬 Kanley Stubrick – The Visionary Founder</h2>
+                        <h2 class="h5 mb-0">🧑‍🎬 Kanley Stubrick – Filmmaker</h2>
                     </div>
                     <div class="card-body">
                         <div class="character-concerns">
@@ -193,6 +193,10 @@ Scenario: Verify moderator actions during migration
     And restores moderator capabilities after migration
     And logs all attempted actions during migration</code></pre>
                         </div>
+                        <p class="text-muted mb-0">
+                            <i class="bi bi-quote me-2"></i>
+                            <strong>The Filmmaker:</strong> A filmmaker & early submitter who regularly submits film proposals using FILMCredits and participates in Creative Queries. With high internal wallet balance, reputation, and a valuable NFT, likely a founding participant who uses DCP as a platform to launch projects quickly.
+                        </p>
                     </div>
                 </div>
             </div>
