--- a/characters.html
+++ b/characters.html
@@ -73,6 +73,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="gherkin-scenarios.html">Test Scenarios</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="migration-testing-challenges.html">Testing Challenges</a>
+                    </li>
                 </ul>
             </div>
         </div>
