--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="gherkin-scenarios.html">Test Scenarios</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="migration-testing-challenges.html">Testing Challenges</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -344,6 +347,11 @@
                                     <div class="ms-2 me-auto">
                                         <div class="fw-bold">Tezos Snapshot</div>
                                         Take snapshot of account balances and reputation on Tezos
+                                        <div class="mt-2">
+                                            <a href="migration-testing-challenges.html" class="btn btn-sm btn-outline-primary">
+                                                <i class="bi bi-info-circle me-1"></i>Learn about testing challenges
+                                            </a>
+                                        </div>
                                     </div>
                                 </li>
                                 <li class="list-group-item d-flex justify-content-between align-items-start">
