rename apple user

--- a/gherkin-scenarios.html
+++ b/gherkin-scenarios.html
@@ -122,8 +122,8 @@
                                             <div class="small text-muted mt-1">Sandra</div>
                                         </div>
                                         <div class="text-center">
-                                            <img src="https://randomuser.me/api/portraits/men/35.jpg" alt="Apple User" class="rounded-circle" style="width: 60px; height: 60px; object-fit: cover;">
-                                            <div class="small text-muted mt-1">Apple User</div>
+                                            <img src="https://randomuser.me/api/portraits/men/35.jpg" alt="Skipper Macintosh" class="rounded-circle" style="width: 60px; height: 60px; object-fit: cover;">
+                                            <div class="small text-muted mt-1">Skipper</div>
                                         </div>
                                         <div class="text-center">
                                             <img src="https://randomuser.me/api/portraits/men/22.jpg" alt="New User" class="rounded-circle" style="width: 60px; height: 60px; object-fit: cover;">
