--- a/characters.html
+++ b/characters.html
@@ -289,17 +289,17 @@
                 </div>
             </div>
             
-            <!-- Apple User -->
+            <!-- Skipper Macintosh -->
             <div class="col-lg-6 col-md-6 mb-4">
                 <div class="card h-100 border-left-dark">
                     <div class="card-header bg-dark text-white d-flex justify-content-between align-items-center">
-                        <h5 class="mb-0">Apple User</h5>
+                        <h5 class="mb-0">Skipper Macintosh</h5>
                         <span class="badge bg-dark">Typical Film Enthusiast</span>
                     </div>
                     <div class="card-body">
                         <div class="row">
                             <div class="col-md-4 text-center mb-3 mb-md-0">
-                                <img src="https://randomuser.me/api/portraits/men/35.jpg" alt="Apple User" class="img-fluid rounded-circle mb-2" style="width: 130px; height: 130px; object-fit: cover;">
+                                <img src="https://randomuser.me/api/portraits/men/35.jpg" alt="Skipper Macintosh" class="img-fluid rounded-circle mb-2" style="width: 130px; height: 130px; object-fit: cover;">
                                 <div>
                                     <span class="badge bg-secondary">Film Enthusiast</span>
                                 </div>
@@ -420,7 +420,7 @@
                                         <td>Token investment and blockchain participation</td>
                                     </tr>
                                     <tr>
-                                        <td><strong>Apple User</strong></td>
+                                        <td><strong>Skipper Macintosh</strong></td>
                                         <td>Film Enthusiast</td>
                                         <td>Rates films, participates in quizzes, submits creative queries, Discord engagement</td>
                                         <td>Mainstream platform participation and community engagement</td>
