revise front page

--- a/index.html
+++ b/index.html
@@ -106,13 +106,25 @@
                         <div class="col-md-6">
                             <div class="card h-100">
                                 <div class="card-header bg-primary text-white">
-                                    <h5 class="mb-0">Migration Specific Properties</h5>
+                                    <h5 class="mb-0">Migration Critical Properties</h5>
                                 </div>
                                 <div class="card-body">
                                     <ul class="list-group list-group-flush">
-                                        <li class="list-group-item"><i class="bi bi-currency-exchange me-2 text-primary"></i> Token balances (internal, external, and locked)</li>
-                                        <li class="list-group-item"><i class="bi bi-graph-up-arrow me-2 text-success"></i> Reputation scores</li>
-                                        <li class="list-group-item"><i class="bi bi-person-badge me-2 text-warning"></i> NFT ownership</li>
+                                        <li class="list-group-item">
+                                            <i class="bi bi-currency-exchange me-2 text-primary"></i> 
+                                            <strong>Token Balances</strong>
+                                            <small class="d-block text-muted mt-1">Internal, external, and locked balances across all user roles</small>
+                                        </li>
+                                        <li class="list-group-item">
+                                            <i class="bi bi-person-badge me-2 text-warning"></i> 
+                                            <strong>Role-Specific Assets</strong>
+                                            <small class="d-block text-muted mt-1">NFTs, moderator status, validator roles, and submission history</small>
+                                        </li>
+                                        <li class="list-group-item">
+                                            <i class="bi bi-shield-lock me-2 text-success"></i> 
+                                            <strong>Authentication Methods</strong>
+                                            <small class="d-block text-muted mt-1">Social auth, hardware wallets, and Web3auth integration</small>
+                                        </li>
                                     </ul>
                                 </div>
                             </div>
@@ -120,13 +132,25 @@
                         <div class="col-md-6">
                             <div class="card h-100">
                                 <div class="card-header bg-info text-white">
-                                    <h5 class="mb-0">Possible Regression Areas</h5>
+                                    <h5 class="mb-0">Critical Migration Paths</h5>
                                 </div>
                                 <div class="card-body">
                                     <ul class="list-group list-group-flush">
-                                        <li class="list-group-item"><i class="bi bi-shield-check me-2 text-info"></i> Verification and authentication status</li>
-                                        <li class="list-group-item"><i class="bi bi-bug me-2 text-danger"></i> Bug reports and platform feedback</li>
-                                        <li class="list-group-item"><i class="bi bi-wallet me-2 text-secondary"></i> Wallet connection capabilities</li>
+                                        <li class="list-group-item">
+                                            <i class="bi bi-shield-check me-2 text-info"></i> 
+                                            <strong>User Journey Integrity</strong>
+                                            <small class="d-block text-muted mt-1">Character-specific migration paths and role preservation</small>
+                                        </li>
+                                        <li class="list-group-item">
+                                            <i class="bi bi-wallet2 me-2 text-secondary"></i> 
+                                            <strong>Wallet & Auth Flow</strong>
+                                            <small class="d-block text-muted mt-1">Browser/wallet combinations and authentication methods</small>
+                                        </li>
+                                        <li class="list-group-item">
+                                            <i class="bi bi-arrow-repeat me-2 text-danger"></i> 
+                                            <strong>Migration Script Safety</strong>
+                                            <small class="d-block text-muted mt-1">Idempotent operations and state preservation</small>
+                                        </li>
                                     </ul>
                                 </div>
                             </div>
