--- a/characters.html
+++ b/characters.html
@@ -76,6 +76,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="migration-testing-challenges.html">Testing Challenges</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="test-gaps.html">Test Gaps</a>
+                    </li>
                 </ul>
             </div>
         </div>
